DEPRECATED_Q2/PARSER/qgrammar.output
Terminals unused in grammar

   FP
   KEYWORD
   TBL
   COLON
   EQUALS
   COMMA
   LT
   GT
   NOOP
   LEQ
   GEQ
   GEQANDLEQ
   GTANDLT
   LEQORGEQ
   LTORGT
   OPEN_SQUARE
   CLOSE_SQUARE


Grammar

    0 $accept: command $end

    1 command: QMARK
    2        | VERB
    3        | POUND STRING
    4        | ASTERISK STRING
    5        | QMARK STRING
    6        | QMARK STRING ASTERISK
    7        | QMARK STRING PROPERTY
    8        | QMARK STRING DOT STRING
    9        | QMARK STRING DOT STRING ASTERISK
   10        | QMARK STRING DOT STRING PROPERTY
   11        | PLUS STRING DOT STRING PROPERTY PROPERTY_VAL
   12        | MINUS STRING DOT STRING PROPERTY
   13        | STRING ASSIGN VERB ARGS
   14        | MINUS STRING
   15        | MINUS STRING DOT STRING
   16        | STRING DOT STRING ASSIGN VERB ARGS
   17        | STRING OPEN_ROUND STRING ASSIGN VERB STRING CLOSE_ROUND XARGS
   18        | VERB STRING DOT STRING XARGS
   19        | VERB CTBL DOT STRING XARGS
   20        | STRING ADDTO STRING
   21        | STRING ASSIGN STRING
   22        | STRING MOVE STRING
   23        | STRING DOT STRING ASSIGN STRING DOT STRING
   24        | STRING DOT STRING MOVE STRING DOT STRING

   25 CTBL: STRING VBAR OPEN_ROUND STRING CLOSE_ROUND
   26     | STRING VBAR OPEN_ROUND INT INT CLOSE_ROUND
   27     | STRING VBAR OPEN_ROUND STRING STRING STRING CLOSE_ROUND XARGS

   28 XARGS: %empty
   29      | ARGS

   30 PROPERTY_VAL: INT
   31             | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 26 30
FP (259)
STRING (260) 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 31
VERB (261) 2 13 16 17 18 19
ARGS (262) 13 16 29
KEYWORD (263)
PROPERTY (264) 7 10 11 12
TBL (265)
VBAR (266) 25 26 27
MINUS (267) 12 14 15
PLUS (268) 11
DOT (269) 8 9 10 11 12 15 16 18 19 23 24
QMARK (270) 1 5 6 7 8 9 10
COLON (271)
EQUALS (272)
COMMA (273)
LT (274)
GT (275)
ASTERISK (276) 4 6 9
POUND (277) 3
NOOP (278)
LEQ (279)
GEQ (280)
ASSIGN (281) 13 16 17 21 23
ADDTO (282) 20
MOVE (283) 22 24
GEQANDLEQ (284)
GTANDLT (285)
LEQORGEQ (286)
LTORGT (287)
OPEN_SQUARE (288)
CLOSE_SQUARE (289)
OPEN_ROUND (290) 17 25 26 27
CLOSE_ROUND (291) 17 25 26 27


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
command (38)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24, on right: 0
CTBL (39)
    on left: 25 26 27, on right: 19
XARGS (40)
    on left: 28 29, on right: 17 18 19 27
PROPERTY_VAL (41)
    on left: 30 31, on right: 11


State 0

    0 $accept: . command $end

    STRING    shift, and go to state 1
    VERB      shift, and go to state 2
    MINUS     shift, and go to state 3
    PLUS      shift, and go to state 4
    QMARK     shift, and go to state 5
    ASTERISK  shift, and go to state 6
    POUND     shift, and go to state 7

    command  go to state 8


State 1

   13 command: STRING . ASSIGN VERB ARGS
   16        | STRING . DOT STRING ASSIGN VERB ARGS
   17        | STRING . OPEN_ROUND STRING ASSIGN VERB STRING CLOSE_ROUND XARGS
   20        | STRING . ADDTO STRING
   21        | STRING . ASSIGN STRING
   22        | STRING . MOVE STRING
   23        | STRING . DOT STRING ASSIGN STRING DOT STRING
   24        | STRING . DOT STRING MOVE STRING DOT STRING

    DOT         shift, and go to state 9
    ASSIGN      shift, and go to state 10
    ADDTO       shift, and go to state 11
    MOVE        shift, and go to state 12
    OPEN_ROUND  shift, and go to state 13


State 2

    2 command: VERB .
   18        | VERB . STRING DOT STRING XARGS
   19        | VERB . CTBL DOT STRING XARGS

    STRING  shift, and go to state 14

    $default  reduce using rule 2 (command)

    CTBL  go to state 15


State 3

   12 command: MINUS . STRING DOT STRING PROPERTY
   14        | MINUS . STRING
   15        | MINUS . STRING DOT STRING

    STRING  shift, and go to state 16


State 4

   11 command: PLUS . STRING DOT STRING PROPERTY PROPERTY_VAL

    STRING  shift, and go to state 17


State 5

    1 command: QMARK .
    5        | QMARK . STRING
    6        | QMARK . STRING ASTERISK
    7        | QMARK . STRING PROPERTY
    8        | QMARK . STRING DOT STRING
    9        | QMARK . STRING DOT STRING ASTERISK
   10        | QMARK . STRING DOT STRING PROPERTY

    STRING  shift, and go to state 18

    $default  reduce using rule 1 (command)


State 6

    4 command: ASTERISK . STRING

    STRING  shift, and go to state 19


State 7

    3 command: POUND . STRING

    STRING  shift, and go to state 20


State 8

    0 $accept: command . $end

    $end  shift, and go to state 21


State 9

   16 command: STRING DOT . STRING ASSIGN VERB ARGS
   23        | STRING DOT . STRING ASSIGN STRING DOT STRING
   24        | STRING DOT . STRING MOVE STRING DOT STRING

    STRING  shift, and go to state 22


State 10

   13 command: STRING ASSIGN . VERB ARGS
   21        | STRING ASSIGN . STRING

    STRING  shift, and go to state 23
    VERB    shift, and go to state 24


State 11

   20 command: STRING ADDTO . STRING

    STRING  shift, and go to state 25


State 12

   22 command: STRING MOVE . STRING

    STRING  shift, and go to state 26


State 13

   17 command: STRING OPEN_ROUND . STRING ASSIGN VERB STRING CLOSE_ROUND XARGS

    STRING  shift, and go to state 27


State 14

   18 command: VERB STRING . DOT STRING XARGS
   25 CTBL: STRING . VBAR OPEN_ROUND STRING CLOSE_ROUND
   26     | STRING . VBAR OPEN_ROUND INT INT CLOSE_ROUND
   27     | STRING . VBAR OPEN_ROUND STRING STRING STRING CLOSE_ROUND XARGS

    VBAR  shift, and go to state 28
    DOT   shift, and go to state 29


State 15

   19 command: VERB CTBL . DOT STRING XARGS

    DOT  shift, and go to state 30


State 16

   12 command: MINUS STRING . DOT STRING PROPERTY
   14        | MINUS STRING .
   15        | MINUS STRING . DOT STRING

    DOT  shift, and go to state 31

    $default  reduce using rule 14 (command)


State 17

   11 command: PLUS STRING . DOT STRING PROPERTY PROPERTY_VAL

    DOT  shift, and go to state 32


State 18

    5 command: QMARK STRING .
    6        | QMARK STRING . ASTERISK
    7        | QMARK STRING . PROPERTY
    8        | QMARK STRING . DOT STRING
    9        | QMARK STRING . DOT STRING ASTERISK
   10        | QMARK STRING . DOT STRING PROPERTY

    PROPERTY  shift, and go to state 33
    DOT       shift, and go to state 34
    ASTERISK  shift, and go to state 35

    $default  reduce using rule 5 (command)


State 19

    4 command: ASTERISK STRING .

    $default  reduce using rule 4 (command)


State 20

    3 command: POUND STRING .

    $default  reduce using rule 3 (command)


State 21

    0 $accept: command $end .

    $default  accept


State 22

   16 command: STRING DOT STRING . ASSIGN VERB ARGS
   23        | STRING DOT STRING . ASSIGN STRING DOT STRING
   24        | STRING DOT STRING . MOVE STRING DOT STRING

    ASSIGN  shift, and go to state 36
    MOVE    shift, and go to state 37


State 23

   21 command: STRING ASSIGN STRING .

    $default  reduce using rule 21 (command)


State 24

   13 command: STRING ASSIGN VERB . ARGS

    ARGS  shift, and go to state 38


State 25

   20 command: STRING ADDTO STRING .

    $default  reduce using rule 20 (command)


State 26

   22 command: STRING MOVE STRING .

    $default  reduce using rule 22 (command)


State 27

   17 command: STRING OPEN_ROUND STRING . ASSIGN VERB STRING CLOSE_ROUND XARGS

    ASSIGN  shift, and go to state 39


State 28

   25 CTBL: STRING VBAR . OPEN_ROUND STRING CLOSE_ROUND
   26     | STRING VBAR . OPEN_ROUND INT INT CLOSE_ROUND
   27     | STRING VBAR . OPEN_ROUND STRING STRING STRING CLOSE_ROUND XARGS

    OPEN_ROUND  shift, and go to state 40


State 29

   18 command: VERB STRING DOT . STRING XARGS

    STRING  shift, and go to state 41


State 30

   19 command: VERB CTBL DOT . STRING XARGS

    STRING  shift, and go to state 42


State 31

   12 command: MINUS STRING DOT . STRING PROPERTY
   15        | MINUS STRING DOT . STRING

    STRING  shift, and go to state 43


State 32

   11 command: PLUS STRING DOT . STRING PROPERTY PROPERTY_VAL

    STRING  shift, and go to state 44


State 33

    7 command: QMARK STRING PROPERTY .

    $default  reduce using rule 7 (command)


State 34

    8 command: QMARK STRING DOT . STRING
    9        | QMARK STRING DOT . STRING ASTERISK
   10        | QMARK STRING DOT . STRING PROPERTY

    STRING  shift, and go to state 45


State 35

    6 command: QMARK STRING ASTERISK .

    $default  reduce using rule 6 (command)


State 36

   16 command: STRING DOT STRING ASSIGN . VERB ARGS
   23        | STRING DOT STRING ASSIGN . STRING DOT STRING

    STRING  shift, and go to state 46
    VERB    shift, and go to state 47


State 37

   24 command: STRING DOT STRING MOVE . STRING DOT STRING

    STRING  shift, and go to state 48


State 38

   13 command: STRING ASSIGN VERB ARGS .

    $default  reduce using rule 13 (command)


State 39

   17 command: STRING OPEN_ROUND STRING ASSIGN . VERB STRING CLOSE_ROUND XARGS

    VERB  shift, and go to state 49


State 40

   25 CTBL: STRING VBAR OPEN_ROUND . STRING CLOSE_ROUND
   26     | STRING VBAR OPEN_ROUND . INT INT CLOSE_ROUND
   27     | STRING VBAR OPEN_ROUND . STRING STRING STRING CLOSE_ROUND XARGS

    INT     shift, and go to state 50
    STRING  shift, and go to state 51


State 41

   18 command: VERB STRING DOT STRING . XARGS

    ARGS  shift, and go to state 52

    $default  reduce using rule 28 (XARGS)

    XARGS  go to state 53


State 42

   19 command: VERB CTBL DOT STRING . XARGS

    ARGS  shift, and go to state 52

    $default  reduce using rule 28 (XARGS)

    XARGS  go to state 54


State 43

   12 command: MINUS STRING DOT STRING . PROPERTY
   15        | MINUS STRING DOT STRING .

    PROPERTY  shift, and go to state 55

    $default  reduce using rule 15 (command)


State 44

   11 command: PLUS STRING DOT STRING . PROPERTY PROPERTY_VAL

    PROPERTY  shift, and go to state 56


State 45

    8 command: QMARK STRING DOT STRING .
    9        | QMARK STRING DOT STRING . ASTERISK
   10        | QMARK STRING DOT STRING . PROPERTY

    PROPERTY  shift, and go to state 57
    ASTERISK  shift, and go to state 58

    $default  reduce using rule 8 (command)


State 46

   23 command: STRING DOT STRING ASSIGN STRING . DOT STRING

    DOT  shift, and go to state 59


State 47

   16 command: STRING DOT STRING ASSIGN VERB . ARGS

    ARGS  shift, and go to state 60


State 48

   24 command: STRING DOT STRING MOVE STRING . DOT STRING

    DOT  shift, and go to state 61


State 49

   17 command: STRING OPEN_ROUND STRING ASSIGN VERB . STRING CLOSE_ROUND XARGS

    STRING  shift, and go to state 62


State 50

   26 CTBL: STRING VBAR OPEN_ROUND INT . INT CLOSE_ROUND

    INT  shift, and go to state 63


State 51

   25 CTBL: STRING VBAR OPEN_ROUND STRING . CLOSE_ROUND
   27     | STRING VBAR OPEN_ROUND STRING . STRING STRING CLOSE_ROUND XARGS

    STRING       shift, and go to state 64
    CLOSE_ROUND  shift, and go to state 65


State 52

   29 XARGS: ARGS .

    $default  reduce using rule 29 (XARGS)


State 53

   18 command: VERB STRING DOT STRING XARGS .

    $default  reduce using rule 18 (command)


State 54

   19 command: VERB CTBL DOT STRING XARGS .

    $default  reduce using rule 19 (command)


State 55

   12 command: MINUS STRING DOT STRING PROPERTY .

    $default  reduce using rule 12 (command)


State 56

   11 command: PLUS STRING DOT STRING PROPERTY . PROPERTY_VAL

    INT     shift, and go to state 66
    STRING  shift, and go to state 67

    PROPERTY_VAL  go to state 68


State 57

   10 command: QMARK STRING DOT STRING PROPERTY .

    $default  reduce using rule 10 (command)


State 58

    9 command: QMARK STRING DOT STRING ASTERISK .

    $default  reduce using rule 9 (command)


State 59

   23 command: STRING DOT STRING ASSIGN STRING DOT . STRING

    STRING  shift, and go to state 69


State 60

   16 command: STRING DOT STRING ASSIGN VERB ARGS .

    $default  reduce using rule 16 (command)


State 61

   24 command: STRING DOT STRING MOVE STRING DOT . STRING

    STRING  shift, and go to state 70


State 62

   17 command: STRING OPEN_ROUND STRING ASSIGN VERB STRING . CLOSE_ROUND XARGS

    CLOSE_ROUND  shift, and go to state 71


State 63

   26 CTBL: STRING VBAR OPEN_ROUND INT INT . CLOSE_ROUND

    CLOSE_ROUND  shift, and go to state 72


State 64

   27 CTBL: STRING VBAR OPEN_ROUND STRING STRING . STRING CLOSE_ROUND XARGS

    STRING  shift, and go to state 73


State 65

   25 CTBL: STRING VBAR OPEN_ROUND STRING CLOSE_ROUND .

    $default  reduce using rule 25 (CTBL)


State 66

   30 PROPERTY_VAL: INT .

    $default  reduce using rule 30 (PROPERTY_VAL)


State 67

   31 PROPERTY_VAL: STRING .

    $default  reduce using rule 31 (PROPERTY_VAL)


State 68

   11 command: PLUS STRING DOT STRING PROPERTY PROPERTY_VAL .

    $default  reduce using rule 11 (command)


State 69

   23 command: STRING DOT STRING ASSIGN STRING DOT STRING .

    $default  reduce using rule 23 (command)


State 70

   24 command: STRING DOT STRING MOVE STRING DOT STRING .

    $default  reduce using rule 24 (command)


State 71

   17 command: STRING OPEN_ROUND STRING ASSIGN VERB STRING CLOSE_ROUND . XARGS

    ARGS  shift, and go to state 52

    $default  reduce using rule 28 (XARGS)

    XARGS  go to state 74


State 72

   26 CTBL: STRING VBAR OPEN_ROUND INT INT CLOSE_ROUND .

    $default  reduce using rule 26 (CTBL)


State 73

   27 CTBL: STRING VBAR OPEN_ROUND STRING STRING STRING . CLOSE_ROUND XARGS

    CLOSE_ROUND  shift, and go to state 75


State 74

   17 command: STRING OPEN_ROUND STRING ASSIGN VERB STRING CLOSE_ROUND XARGS .

    $default  reduce using rule 17 (command)


State 75

   27 CTBL: STRING VBAR OPEN_ROUND STRING STRING STRING CLOSE_ROUND . XARGS

    ARGS  shift, and go to state 52

    $default  reduce using rule 28 (XARGS)

    XARGS  go to state 76


State 76

   27 CTBL: STRING VBAR OPEN_ROUND STRING STRING STRING CLOSE_ROUND XARGS .

    $default  reduce using rule 27 (CTBL)
